# soft-sec-final

./: .gitignore  PLATFORM.md  load_driver.bat  sign.bat  test_signing.bat  unload_driver.bat
km/anti-cheat/anti-cheat/: anti-cheat.vcxproj  anti-cheat.vcxproj.filters  callback.cpp  communication.cpp  communication.h  heartbeat.cpp  includes.h  main.cpp
scripts/: anticheat.cer  sign.bat
src/km/anti-cheat/: anti-cheat.sln
src/km/anti-cheat/anti-cheat/: anti-cheat.inf  anti-cheat.vcxproj.filters  callback.cpp  callback.h  heartbeat.h  includes.h
src/um/: CMakeLists.txt
src/um/communication/: Communication.h
src/um/player/: Player.cpp  Player.h
src/um/protection/: Protection.h
src/um/util/: Util.cpp  Util.h
um/: CMakeLists.txt  main.cpp
um/communication/: Communication.cpp
um/player/: Player.cpp
um/protection/: Protection.cpp
